# protobuf

./: MODULE.bazel  protobuf.bzl
examples/: MODULE.bazel  WORKSPACE
java/core/: BUILD
java/kotlin/: BUILD
java/kotlin-lite/: BUILD
java/util/: BUILD
ruby/: BUILD.bazel
src/google/protobuf/: BUILD.bazel
src/google/protobuf/compiler/: BUILD.bazel
