module(
    name = "protobuf",
    version = "3.19.6",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.0.3")
bazel_dep(name = "zlib", version = "1.2.12")
bazel_dep(name = "rules_python", version = "0.4.0")
bazel_dep(name = "rules_cc", version = "0.0.1")
bazel_dep(name = "rules_proto", version = "4.0.0")
bazel_dep(name = "rules_java", version = "4.0.0")
bazel_dep(name = "rules_kotlin", version = "1.9.6")
bazel_dep(name = "rules_pkg", version = "0.7.0")
bazel_dep(name = "googletest", version = "1.15.2", repo_name = "com_google_googletest")

# Maven dependencies
#bazel_dep(name = "rules_jvm_external", version = "4.4.2")
bazel_dep(name = "rules_jvm_external", version = "6.4")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.8.9",
        "com.google.errorprone:error_prone_annotations:2.3.2",
        "com.google.j2objc:j2objc-annotations:1.3",
        "com.google.guava:guava:31.1-jre",
        "com.google.guava:guava-testlib:31.1-jre",
        "com.google.truth:truth:1.1.2",
        "junit:junit:4.13.2",
        "org.mockito:mockito-core:4.3.1",
    ],
)
use_repo(maven, "maven")

rules_kotlin_extensions = use_extension("@rules_kotlin//src/main/starlark/core/repositories:bzlmod_setup.bzl", "rules_kotlin_extensions")
use_repo(
    rules_kotlin_extensions,
    "com_github_jetbrains_kotlin",
)
